--- a/layouts/contact/list.html
+++ b/layouts/contact/list.html
@@ -31,7 +31,7 @@
     <div class="row justify-content-center">
       <div class="col-lg-8">
         <h2 class="font-weight-bold mb-4">{{ .Title | markdownify }}</h2>
-        <form action="{{ site.Params.contact_form_action }}" method="POST" class="row">
+        <form name="contact" class="row" netlify>
           <div class="col-lg-6 mb-3">
             <input type="text" class="form-control mb-2" id="name" name="name" placeholder="Your Name">
           </div>
